AES GPU passed test

--- a/aestest/Makefile
+++ b/aestest/Makefile
@@ -6,10 +6,10 @@ PTXASFLAG:= --ptxas-options=-v -Xptxas -dlcm=cg
 INCLUDE := ./
 
 SRC = kernel.cu 
-EXE = oramgpu
+EXE = aesgpu
 
-release: $(SRC)
+release: $(SRC) aesctr.h
 	$(CC) $(NVCCFLAG) $(PTXASFLAG) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 clean:
-	rm oramgpu
+	rm aesgpu
