--- a/oramstart/Makefile
+++ b/oramstart/Makefile
@@ -1,15 +1,15 @@
 include ./make.config
 
 CC := nvcc
-NVCCFLAG :=  -O2 --ptxas-options=-v -Xptxas -dlcm=cg  -arch=compute_35 -code=sm_35 -lineinfo --machine 64
-
+NVCCFLAG :=  -O2  -arch=compute_35 -code=sm_35 -lineinfo --machine 64
+PTXASFLAG:= --ptxas-options=-v -Xptxas -dlcm=cg
 INCLUDE := ./
 
 SRC = kernel.cu 
 EXE = oramgpu
 
 release: $(SRC)
-	$(CC) $(NVCCFLAG) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+	$(CC) $(NVCCFLAG) $(PTXASFLAG) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 clean:
 	rm oramgpu
