--- a/oramradix/Makefile
+++ b/oramradix/Makefile
@@ -1,15 +1,16 @@
 include ./make.config
 
 CC := nvcc
-NVCCFLAG :=    -arch=compute_35 -code=sm_35 -lineinfo --machine 64 -Xcompiler -rdynamic
+NVCCFLAG :=   -arch=compute_35 -code=sm_35 -lineinfo --machine 64 -Xcompiler -rdynamic
 PTXASFLAG:= --ptxas-options=-v -Xptxas -dlcm=cg
-INCLUDE := ./
+INCLUDE := ../cub
 
+VARIABLE :=# -DCUDA_ARCH=350
 SRC = kernel.cu 
 EXE = oramgpu
 
-release: $(SRC)
-	$(CC) $(NVCCFLAG) $(PTXASFLAG) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+release: $(SRC)  bucket.h
+	$(CC) $(NVCCFLAG) $(PTXASFLAG) $(VARIABLE)$(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 clean:
 	rm oramgpu
